# zephyr

./: MAINTAINERS.yml
boards/canaan/canmv_k230/: canmv_k230.dts
boards/canaan/canmv_k230/doc/: index.rst
boards/canaan/canmv_k230D/: Kconfig.canmv_k230D  board.yml  canmv_k230D.dts  canmv_k230D.yaml  canmv_k230D_defconfig
boards/canaan/canmv_k230D/doc/: index.rst
drivers/timer/: riscv_machine_timer.c
dts/bindings/: vendor-prefixes.txt
dts/riscv/canaan/: k230.dtsi
include/zephyr/arch/riscv/common/: linker.ld
samples/xnnpack/: CMakeLists.txt  README.rst  prj.conf  sample.yaml
samples/xnnpack/src/: main.c
soc/canaan/: soc.yml
soc/canaan/k230/: Kconfig.defconfig
